# wlxx

./: CMakeLists.txt  README.md  example.cpp  generate.py  requirements.cmake  wayland.xml
cmake/: Findffi.cmake  Findwayland-client.cmake
source/: CMakeLists.txt
source/wl/: wl.hpp
